Task 4.3 Reloading Issue

--- a/public/pages/attendance-page.html
+++ b/public/pages/attendance-page.html
@@ -10,7 +10,6 @@
 <link rel="import" href="/bower_components/core-selector/core-selector.html">
 <link rel="import" href="/pages/app-ajax.html">
 <script src="/bower_components/moment/moment.js"></script>
-<link rel="import" href="/bower_components/paper-calendar/paper-calendar.html">
 
 
 
@@ -65,11 +64,9 @@
                 <paper-toast id="toast1" text="" on-click="{{dataResponse(el)}}" opened="false"></paper-toast>
 
             </div>
-            <div>
-                <paper-calendar>
-                    
-                </paper-calendar>
-            </div>
+<!--            <div>
+                <paper-calendar></paper-calendar>
+            </div>-->
 <!--            <div>
 
                 <input id="trigger" value="{{selectedDate}}" 
