--- a/public/pages/update-page.html
+++ b/public/pages/update-page.html
@@ -9,7 +9,7 @@
     <template>
         <baasic-globals id="globals"></baasic-globals>
         <sidebar-layout>
-            <div class="title">Employees Update</div>
+            <div class="title">Employee Record</div>
 
             <!--                <paper-input id="employeeid" label="Employee ID" value="{{employeeid}}" floatinglabel></paper-input>
                         </div><div>-->
@@ -113,7 +113,7 @@
             }
         },
         domReady : function(){
-            document.title = "Update Employees";
+            document.title = "Employee Record";
             //                console.log("Employees Test");
             if(this.employeeid)
             {
