--- a/public/pages/signin-page.html
+++ b/public/pages/signin-page.html
@@ -1,5 +1,6 @@
 <link rel="import" href="/bower_components/polymer/polymer.html">
 <link rel="import" href="/bower_components/baasic-login/baasic-login.html"> 
+<link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 
 
 <polymer-element name="signin-page" router="{{router}}" attributes="pathArg1 queryParam1 redirectUrl" >
