--- a/public/pages/employees-page.html
+++ b/public/pages/employees-page.html
@@ -145,19 +145,19 @@
                                 <div  class="item {{ {selected: selected} | tokenList }}">
                                     <core-icon src="/images/4.png" style="width: 35px;height: 35px;"></core-icon>
                                     <!--<div class="message" style="background-image: url(images/{{model.image}}.png);">-->
-                                    <span class="from">{{model.FirstName}}</span>
-                                    <span class="from">{{model.LastName}}</span>
+                                    <span class="from">{{model.value.employeename}}</span>
+                                    <!--<span class="from">{{model.LastName}}</span>-->
                                     <a is="pushstate-anchor" href="/#/employees/update/{{model.EmployeeID}}"><core-icon class="image" src="/images/update.png" title="Update-Employee" name="update"></core-icon></a>
                                     <!--<span class="from">{{model.CompanyName}}</span>-->
                                     <!--<span class="from">{{model.MainID}}</span>-->
                                     <!--<span class="from">{{model.RegistrationDate}}</span>-->
-                                    <div class="subject">Employee ID: {{model.EmployeeID}}</div>
+                                    <div class="subject"><b>Employee ID:</b> {{model.value.id}}</div>
                                     <!--<input type="checkbox" checked="{{model.checked}}">-->
                                     <!--<input type="number" value="{{model.value}}" class="narrow">-->
                                     <!--<select selectedIndex="{{model.type}}"><option>a</option><option>b</option><option>c</option></select>-->
-                                    <span class="body">Company Name:{{model.CompanyName}},</span>
-                                    <span class="body">Main ID:{{model.MainID}},</span>
-                                    <span class="body">Registration Date:{{model.RegistrationDate | date('yyyy/MM/dd')}}.</span>
+                                    <span class="body"><b>Company Name:</b> {{model.value.companyname}},</span>
+                                    <!--<span class="body">Main ID:{{model.MainID}},</span>-->
+                                    <span class="body"><b>Registration Date:</b> {{model.value.registrationdate | date('yyyy/MM/dd')}}.</span>
                                 </div>
                                 </div>
 <!--                            </td>
@@ -187,7 +187,7 @@
             }, 
             employeeResponse: function()
             {
-//                console.log(this.$.ajax.response.data);
+                console.log(this.$.ajax.response.data);
                 if(this.$.ajax.response.status==true)
                 {
                     this.employees = this.$.ajax.response.data;
