--- a/public/pages/employees-page.html
+++ b/public/pages/employees-page.html
@@ -147,7 +147,7 @@
                                     <!--<div class="message" style="background-image: url(images/{{model.image}}.png);">-->
                                     <span class="from">{{model.value.employeename}}</span>
                                     <!--<span class="from">{{model.LastName}}</span>-->
-                                    <a is="pushstate-anchor" href="/#/employees/update/{{model.EmployeeID}}"><core-icon class="image" src="/images/update.png" title="Update-Employee" name="update"></core-icon></a>
+                                    <a is="pushstate-anchor" href="/#/employees/update/{{model.id}}"><core-icon class="image" src="/images/update.png" title="Update-Employee" name="update"></core-icon></a>
                                     <!--<span class="from">{{model.CompanyName}}</span>-->
                                     <!--<span class="from">{{model.MainID}}</span>-->
                                     <!--<span class="from">{{model.RegistrationDate}}</span>-->
@@ -187,7 +187,7 @@
             }, 
             employeeResponse: function()
             {
-                console.log(this.$.ajax.response.data);
+//                console.log(this.$.ajax.response.data);
                 if(this.$.ajax.response.status==true)
                 {
                     this.employees = this.$.ajax.response.data;
